--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,7 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+- task: UseJava@1
+  inputs:
+    version: '11'
+    architecture: 'x64'
